Add Asterisk WebRTC configuration and logging setup
- Created README.md for Asterisk WebRTC setup instructions.
- Added http.conf to enable HTTP and WebSocket listeners for Asterisk.
- Introduced modules.conf.append to load necessary WebSocket and PJSIP modules.
- Added pjsip-webrtc.conf for WebRTC transport and endpoint configuration.
- Created rtp.conf to define RTP range and ICE support.
- Implemented a logrotate configuration for Asterisk logs.
- Added journald.conf to manage systemd journal logging settings.
- Updated kafka-server.properties.append for Kafka log retention policies.
- Created systemd service files for dialer API, dialer worker, and Kafka.